// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGenerationPlan > matches the recorded plan for the api-mongo preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "476ab4ff54a2589b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".env",
      "sha256": "decd0c4fdb121d34",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".env.example",
      "sha256": "01f45bb43233095b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "4ee0ef09b8860aad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "e8c32fe7bfa2488b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "Dockerfile",
      "sha256": "93f1b713082211fd",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "2a1dafd0b81036ad",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "f943385f52a13d8a",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "src/app.ts",
      "sha256": "2597ef54623e03c2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/cache/redis.ts",
      "sha256": "62a669e6328061cb",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/config/env.ts",
      "sha256": "6aac71869c4a69aa",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/client.ts",
      "sha256": "8d94594a606c9992",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/index.ts",
      "sha256": "d0159b00f4b04855",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lifecycle.ts",
      "sha256": "743411a719615e16",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/rate-limit.ts",
      "sha256": "efd30ceb843e4348",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/shared/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/shared/utils/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/api-response.test.ts",
      "sha256": "780f88f34d6e03db",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/health.test.ts",
      "sha256": "10cccbc87bb5c976",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/app.ts",
      "sha256": "858fe9e79041dbcc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/rate-limit.test.ts",
      "sha256": "9becf304f2911888",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "vitest.config.ts",
      "sha256": "92706cb90111a712",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "database-mongodb",
    "orm-mongoose",
    "cache-redis",
    "arch-feature",
    "testing-vitest",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-rate-limit",
    "devops-docker",
    "core-backend",
    "framework-express",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the backend preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "fadc8ee1879254be",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".env",
      "sha256": "f18cea6c31c3825e",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".env.example",
      "sha256": "fd20e0569ef3ed7f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "4ee0ef09b8860aad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "afe720205b403588",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "prisma/schema.prisma",
      "sha256": "94c7bc2816e9a523",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "0435e2f82431a1f0",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "src/app.ts",
      "sha256": "e5e64065dd195156",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/application/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/config/env.ts",
      "sha256": "3ae19ac28fae2f98",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/domain/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/index.ts",
      "sha256": "d0159b00f4b04855",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/infrastructure/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/interfaces/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/compression.ts",
      "sha256": "345c26a8946e8d83",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/origin-check.ts",
      "sha256": "aff5f991bcfab39c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/rate-limit.ts",
      "sha256": "efd30ceb843e4348",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/api-response.test.ts",
      "sha256": "7fe6aff12dafe4d7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/health.test.ts",
      "sha256": "de56c3fe751d1e2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/app.ts",
      "sha256": "858fe9e79041dbcc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/rate-limit.test.ts",
      "sha256": "684a56e818aca9e7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "database-postgres",
    "orm-prisma",
    "arch-clean",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-compression",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-origin-checks",
    "security-rate-limit",
    "core-backend",
    "framework-express",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the backend-fastify preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "33435ff54b8f80fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".env",
      "sha256": "e0523990ecad66ec",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".env.example",
      "sha256": "33d566f7b3af367b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "4ee0ef09b8860aad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "5ae2a2d0af701613",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "Dockerfile",
      "sha256": "93f1b713082211fd",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "drizzle.config.mjs",
      "sha256": "7aaa6f3179533a44",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "465c23096344d6ea",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "873c753ad3e1323f",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "src/app.ts",
      "sha256": "e216629353d57a6a",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/config/env.ts",
      "sha256": "59c71f4fc7ec70b2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/client.ts",
      "sha256": "c0f91a168b9df8ae",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/schema.ts",
      "sha256": "8977172d6756689e",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/docs/openapi.ts",
      "sha256": "5444dfe52772e1cf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/index.ts",
      "sha256": "3253803486512349",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/compression.ts",
      "sha256": "aa3c36a6f26c21c2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/cors.ts",
      "sha256": "2dbaad18f2274771",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/docs.ts",
      "sha256": "9ec1edcedb316260",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/errors.ts",
      "sha256": "3c31d8ba2ec8413f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/helmet.ts",
      "sha256": "f0ad71aa80d26df7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/origin-check.ts",
      "sha256": "5a5fdaa2a9903a57",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/rate-limit.ts",
      "sha256": "c8ffba1b385edcd7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/request-id.ts",
      "sha256": "cbf94092e03bd867",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/plugins/validate.ts",
      "sha256": "5e0dae14b63d096d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/routes/health.ts",
      "sha256": "009e5f85e1033d86",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/shared/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/shared/utils/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/api-response.test.ts",
      "sha256": "780f88f34d6e03db",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/docs.test.ts",
      "sha256": "7003fa0d2c55d8a0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/health.test.ts",
      "sha256": "550cbd076878e286",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/app.ts",
      "sha256": "7e899360ced9d2d7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/rate-limit.test.ts",
      "sha256": "9becf304f2911888",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "vitest.config.ts",
      "sha256": "92706cb90111a712",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "api-versioning",
    "database-postgres",
    "orm-drizzle",
    "arch-feature",
    "testing-vitest",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-compression",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-origin-checks",
    "security-rate-limit",
    "devops-docker",
    "api-docs-scalar",
    "core-backend",
    "framework-fastify",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the backend-nest preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "0aa8eba41f9e9f96",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".env",
      "sha256": "9b1b4049333cdcb9",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".env.example",
      "sha256": "af6dd466bab93b3d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "4ee0ef09b8860aad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "5ae2a2d0af701613",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "Dockerfile",
      "sha256": "0ff79fda451971e6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "jest.config.mjs",
      "sha256": "77ba3eb6daa767b4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "e03bc85f74f604ed",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "prisma/schema.prisma",
      "sha256": "d74df4b306df5c64",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "7cf2ee76b768009b",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "src/app.module.ts",
      "sha256": "e9890d269141fd63",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/app.ts",
      "sha256": "895b92e4406d33f0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/config/env.ts",
      "sha256": "beeb1f06b448d42d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/repositories/auth.repository.prisma.ts",
      "sha256": "8c765a8fbbe7f83f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/docs/openapi.ts",
      "sha256": "23fabea0e14bf358",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/filters/error.filter.ts",
      "sha256": "97191960c49afc07",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/health/health.controller.ts",
      "sha256": "ad93fbf4acd2291b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/health/health.module.ts",
      "sha256": "48bdd0b49f44f1e1",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/info.controller.ts",
      "sha256": "994eb521f0de6c66",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/interceptors/envelope.interceptor.ts",
      "sha256": "aca83192954f21c7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/nest-logger.ts",
      "sha256": "590f890f8c05a12c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/main.ts",
      "sha256": "3c7339794160575c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/rate-limit.ts",
      "sha256": "efd30ceb843e4348",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.config.ts",
      "sha256": "d535b64c5dc16190",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.controller.ts",
      "sha256": "55297784437305c7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.cookies.ts",
      "sha256": "66a29d3c1352ddf8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.guard.ts",
      "sha256": "18e3b1ee21f0609a",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.module.ts",
      "sha256": "6bbed28a66863951",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.repository.ts",
      "sha256": "e354c5f4ca9e57b1",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.schemas.ts",
      "sha256": "47bb112bd55d3b67",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/auth.service.ts",
      "sha256": "3349bb229b33a7fb",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/password.ts",
      "sha256": "601d618a4be6da50",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/require-auth.ts",
      "sha256": "9f2cdd7910885270",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/modules/auth/tokens.ts",
      "sha256": "d62a3e3b88706b73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/pipes/zod-validation.pipe.ts",
      "sha256": "17f2933315d9ffd3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/routes/docs.ts",
      "sha256": "8ca69eeed531c7b3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/scripts/make-admin.ts",
      "sha256": "2f94f167571d9b7c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/types/auth.d.ts",
      "sha256": "1a9995bb343f7c72",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/api-response.test.ts",
      "sha256": "147e4ad215f3b615",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/auth.db.test.ts",
      "sha256": "2d6c98c146ee5543",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/auth.test.ts",
      "sha256": "544878352e27dcaf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/docs.test.ts",
      "sha256": "6fd21de33c6e5f5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/envelope.test.ts",
      "sha256": "f85d72884df16d18",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/health.test.ts",
      "sha256": "744f2fc0a3f6300b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/app.ts",
      "sha256": "0602e77fc819f5a5",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/auth.ts",
      "sha256": "afee15de9b0de61c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/rate-limit.test.ts",
      "sha256": "674d7eda5e0ecd4a",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "database-postgres",
    "orm-prisma",
    "testing-jest",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-cors",
    "security-helmet",
    "security-rate-limit",
    "devops-docker",
    "api-docs-scalar",
    "core-backend",
    "framework-nest",
    "auth-jwt",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the fullstack-next-express preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "0d06c3b10d840df7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".github/CODEOWNERS",
      "sha256": "4ab38df29e540715",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/dependabot.yml",
      "sha256": "460381f65ffdbe6c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/ISSUE_TEMPLATE/bug_report.yml",
      "sha256": "4b62583755a00f05",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/ISSUE_TEMPLATE/feature_request.yml",
      "sha256": "20a243cf54ae8b13",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/pull_request_template.md",
      "sha256": "6a17d5ca6e5e265f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/workflows/ci.yml",
      "sha256": "254036539052065c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "8ddfde27f8058400",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "39f135c98eb89486",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".vscode/extensions.json",
      "sha256": "3721e99f092c5dd1",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".vscode/launch.json",
      "sha256": "c7187eeba471a09e",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".vscode/settings.json",
      "sha256": "cbf6695d07798f73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "AGENTS.md",
      "sha256": "bf8001b8a964bddc",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env",
      "sha256": "5f2c3bdc2509c639",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env.example",
      "sha256": "85d442bd645e7e27",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/.gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/Dockerfile",
      "sha256": "3e64ccdbab529f3c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/package.json",
      "sha256": "e3e74e230e11fd23",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma/schema.prisma",
      "sha256": "94c7bc2816e9a523",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/app.ts",
      "sha256": "4ac94c0ff87b3e6e",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/config/env.ts",
      "sha256": "59c71f4fc7ec70b2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/docs/openapi.ts",
      "sha256": "5444dfe52772e1cf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/index.ts",
      "sha256": "d0159b00f4b04855",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/rate-limit.ts",
      "sha256": "efd30ceb843e4348",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/docs.ts",
      "sha256": "8ca69eeed531c7b3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/utils/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/api-response.test.ts",
      "sha256": "780f88f34d6e03db",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/docs.test.ts",
      "sha256": "b32488613886e9e6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/health.test.ts",
      "sha256": "10cccbc87bb5c976",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/helpers/app.ts",
      "sha256": "858fe9e79041dbcc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/rate-limit.test.ts",
      "sha256": "9becf304f2911888",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/vitest.config.ts",
      "sha256": "92706cb90111a712",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/.env",
      "sha256": "5a7de190c5388d3c",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/web/.env.example",
      "sha256": "a5793d50386a6947",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/globals.css",
      "sha256": "aea0fe6baa73fbdf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/health/route.ts",
      "sha256": "a30bffab8933da73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/layout.tsx",
      "sha256": "8852e9fbe2e2a79f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/page.tsx",
      "sha256": "10e365f65d343045",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/components/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/Dockerfile",
      "sha256": "031cd4a7871b9d4b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/hooks/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/api.ts",
      "sha256": "26b6a19dd626acec",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/env.ts",
      "sha256": "f7641adef49b7810",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/status.ts",
      "sha256": "2aee034c25604d70",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/next.config.ts",
      "sha256": "de56c558f4b06c99",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/package.json",
      "sha256": "d98b6f5e510835a7",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/web/postcss.config.mjs",
      "sha256": "e4f77bad33263af0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tests/status.test.ts",
      "sha256": "97ccfef00afda8dc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tsconfig.json",
      "sha256": "a9260fb71443db68",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/vitest.config.mts",
      "sha256": "a193085dd2a89422",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "CLAUDE.md",
      "sha256": "336cc4fbf19beaad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "71dcbdc02e741595",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "ae33352ee3433636",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/package.json",
      "sha256": "06c3ccbf214071c9",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/api-client.ts",
      "sha256": "7bc3b1d233cfab31",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/envelope.ts",
      "sha256": "819d2d4ec478c4df",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/index.ts",
      "sha256": "26e92f135524d798",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/tsconfig.json",
      "sha256": "e5e23bec2ee58602",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "c0315779fdac71c5",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "turbo.json",
      "sha256": "96ae989444f63bf1",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "layout-monorepo",
    "api-versioning",
    "database-postgres",
    "orm-prisma",
    "arch-feature",
    "arch-web-feature",
    "ui-tailwind",
    "testing-vitest",
    "testing-vitest-web",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-rate-limit",
    "devops-docker",
    "devops-docker-web",
    "devops-github-actions",
    "api-docs-scalar",
    "repo-agents-md",
    "repo-github-hygiene",
    "repo-vscode",
    "core-backend",
    "framework-express",
    "shared-api",
    "web-pages",
    "framework-nextjs",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the fullstack-vite-express preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "534ad4e88f67cb10",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".github/CODEOWNERS",
      "sha256": "4ab38df29e540715",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/dependabot.yml",
      "sha256": "460381f65ffdbe6c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/ISSUE_TEMPLATE/bug_report.yml",
      "sha256": "4b62583755a00f05",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/ISSUE_TEMPLATE/feature_request.yml",
      "sha256": "20a243cf54ae8b13",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/pull_request_template.md",
      "sha256": "6a17d5ca6e5e265f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".github/workflows/ci.yml",
      "sha256": "254036539052065c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "8ddfde27f8058400",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "39f135c98eb89486",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".vscode/extensions.json",
      "sha256": "3721e99f092c5dd1",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".vscode/launch.json",
      "sha256": "176977e1084bdc8b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".vscode/settings.json",
      "sha256": "cbf6695d07798f73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "AGENTS.md",
      "sha256": "82d118894f4044ce",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env",
      "sha256": "38c8964d878a189c",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env.example",
      "sha256": "2b520f5551f1a95a",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/.gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/Dockerfile",
      "sha256": "3e64ccdbab529f3c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/package.json",
      "sha256": "14e7888a792427dd",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma/schema.prisma",
      "sha256": "d74df4b306df5c64",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/app.ts",
      "sha256": "2f303c6f8d9a950e",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/config/env.ts",
      "sha256": "beeb1f06b448d42d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/db/repositories/auth.repository.prisma.ts",
      "sha256": "b1586eb67d3f8f40",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/docs/openapi.ts",
      "sha256": "626494adf43369a0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.config.ts",
      "sha256": "d535b64c5dc16190",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.cookies.ts",
      "sha256": "66a29d3c1352ddf8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.repository.ts",
      "sha256": "e354c5f4ca9e57b1",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.routes.ts",
      "sha256": "3f73a79839b9f698",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.schemas.ts",
      "sha256": "47bb112bd55d3b67",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/auth.service.ts",
      "sha256": "3349bb229b33a7fb",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/password.ts",
      "sha256": "601d618a4be6da50",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/require-auth.ts",
      "sha256": "9f2cdd7910885270",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/auth/tokens.ts",
      "sha256": "d62a3e3b88706b73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/index.ts",
      "sha256": "3ee62353c5f4291c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/rate-limiter.ts",
      "sha256": "0b873be6ce9c5f74",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/rate-limit.ts",
      "sha256": "efd30ceb843e4348",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/docs.ts",
      "sha256": "8ca69eeed531c7b3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/scripts/make-admin.ts",
      "sha256": "2f94f167571d9b7c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/utils/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/types/auth.d.ts",
      "sha256": "9a16e338042357aa",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/api-response.test.ts",
      "sha256": "780f88f34d6e03db",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/auth.db.test.ts",
      "sha256": "b38c302f07e8757b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/auth.test.ts",
      "sha256": "509c4b6d51d85f16",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/docs.test.ts",
      "sha256": "b32488613886e9e6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/health.test.ts",
      "sha256": "10cccbc87bb5c976",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/helpers/app.ts",
      "sha256": "432a79643aec98f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/helpers/auth.ts",
      "sha256": "88ea9afae94fe1d2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/rate-limit.test.ts",
      "sha256": "9becf304f2911888",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/vitest.config.ts",
      "sha256": "92706cb90111a712",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/.env",
      "sha256": "14c3955fa2cfe33b",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/web/.env.example",
      "sha256": "934e03de3a50d8d5",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/account/page.tsx",
      "sha256": "d193d934bc7dbe58",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/globals.css",
      "sha256": "aea0fe6baa73fbdf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/login/page.tsx",
      "sha256": "7b1df3b37be7ca15",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/page.tsx",
      "sha256": "e0a2c1ca8cfebba3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/register/page.tsx",
      "sha256": "4f755eabfa0021af",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/components/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/Dockerfile",
      "sha256": "bc004b94244ccb96",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/hooks/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/index.html",
      "sha256": "5a7b224298e53e71",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/api.ts",
      "sha256": "fb90bdc10ae4f612",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/auth/form.ts",
      "sha256": "66a6ecbdb90a3aa5",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/auth/index.ts",
      "sha256": "62c8eef11790f018",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/auth/require-auth.tsx",
      "sha256": "67db22c2943b96d4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/auth/session.ts",
      "sha256": "a9e6e26468e415d4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/navigation.ts",
      "sha256": "8d18ccb2605d0523",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/status.ts",
      "sha256": "d5df1cc98cf46dc6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/main.tsx",
      "sha256": "dec4c7e246c1be04",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/nginx.conf.template",
      "sha256": "ec1e65a295b5c0e9",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/package.json",
      "sha256": "2a409e06bba81f27",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/web/postcss.config.mjs",
      "sha256": "e4f77bad33263af0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tests/auth.test.ts",
      "sha256": "cbe60869ca79105f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tests/status.test.ts",
      "sha256": "97ccfef00afda8dc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tsconfig.json",
      "sha256": "3e6eda506f776569",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/vite-env.d.ts",
      "sha256": "8eb5a057d8cf086b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/vite.config.ts",
      "sha256": "61f22b32379f8ca5",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/vitest.config.mts",
      "sha256": "a193085dd2a89422",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "CLAUDE.md",
      "sha256": "336cc4fbf19beaad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "71dcbdc02e741595",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "ae33352ee3433636",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/package.json",
      "sha256": "06c3ccbf214071c9",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/api-client.ts",
      "sha256": "7bc3b1d233cfab31",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/envelope.ts",
      "sha256": "819d2d4ec478c4df",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/index.ts",
      "sha256": "26e92f135524d798",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/tsconfig.json",
      "sha256": "e5e23bec2ee58602",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "aad8eb1efce0f821",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "turbo.json",
      "sha256": "96ae989444f63bf1",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "layout-monorepo",
    "api-versioning",
    "database-postgres",
    "orm-prisma",
    "arch-feature",
    "arch-web-feature",
    "ui-tailwind",
    "testing-vitest",
    "testing-vitest-web",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-rate-limit",
    "devops-docker",
    "devops-docker-web",
    "devops-github-actions",
    "api-docs-scalar",
    "repo-agents-md",
    "repo-github-hygiene",
    "repo-vscode",
    "core-backend",
    "framework-express",
    "auth-jwt",
    "shared-api",
    "web-pages",
    "framework-react-vite",
  ],
}
`;
